# video-gen

./: .env.example  .gitignore  DEMOS.md  README.md  pyproject.toml
docs/: generate.html  index.html
scripts/: animate-photos.json  k8s-migration.json  korean-baseball-fancam.json  model-comparison.json  paris-vlog.json
video_gen/: generate.py
