[project]
name = "video-gen"
version = "0.1.0"
description = "Generate videos from structured scene scripts using TokenRouter API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[project.scripts]
video-gen = "video_gen.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100
